--- a/page.html
+++ b/page.html
@@ -10,10 +10,6 @@
     <button id="back">Go Back</button>
 
     <script src="hmm.js"></script>
-    <script>
-      //   function vrati() {
-      //     window.history.back();
-      //   }
-    </script>
+    <script></script>
   </body>
 </html>
