--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     Favourite Animal: <input type="text" id="input3" /><br /><br />
     <button type="submit" id="btn4">Submit</button><br />
     <button id="btn5">Show Input</button>
-
+    <p id="timer"></p>
     <script src="main.js"></script>
   </body>
 </html>
