--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
     <h2>Thank you for your time</h2>
     <button id="back">Go Back</button>
 
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
     <script src="hmm.js"></script>
   </body>
 </html>
